--- a/css/custom.css
+++ b/css/custom.css
@@ -43,6 +43,13 @@ iframe {
   --purple-color: #8A2B85;
 }
 
+.btn {
+  margin-right: 0.1%;
+  margin-left: 0;
+  margin-bottom: 1em;
+  font-size: 16px;
+}
+
 .btn-primary {
   background-color: var(--purple-color);
   border-color: var(--purple-color);
@@ -51,6 +58,12 @@ iframe {
 .btn-primary:hover {
   background-color: #A0499C;
   border-color: #A0499C;
+}
+
+.btn-reset, .label, .fa-repeat {
+  color: #ffffff;
+  background-color: var(--green-color);
+  border-color: var(--green-color);
 }
 
 .navbar {
@@ -100,6 +113,44 @@ iframe {
   font-family: 'Istok Web', sans-serif;
   font-size: 0.9em;
   color: var(--text-color);
-
 }
 
+.form-control {
+  height: 36px;
+  padding: 6px 12px;
+  font-size: 14px;
+}
+
+.modal-body-bottom .input-group {
+  width: 100%;
+  height: 36px;
+  font-size: 14px;
+}
+
+
+.select2-container {
+   width: 94% !important;
+}
+
+.select2-container--default .select2-selection--multiple {
+    border-bottom-left-radius: 0 !important;
+    border-top-left-radius: 0 !important;
+    border-left: 0;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+  margin-top: 2%;
+}
+
+.dropdown-menu > li > a {
+  display: inline;
+  padding: 5px 4px;
+}
+
+.m-top-sm { 
+  margin-top: 15px;
+}
+
+.m-bottom-sm { 
+  margin-bottom: 15px;
+}
