--- a/css/custom.css
+++ b/css/custom.css
@@ -119,9 +119,14 @@ iframe {
 }
 
 .form-control {
+  width: 100% ;
   height: 36px;
-  padding: 6px 12px;
+  padding: 12px;
   font-size: 14px;
+}
+
+.form-group {
+  margin-top: 10px;
 }
 
 .modal-body-bottom .input-group {
@@ -143,6 +148,7 @@ iframe {
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
   margin-top: 2%;
+  width: 100%
 }
 
 .dropdown-menu > li > a {
