--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,17 @@
     border-radius: 5px;
 }
 
+.resultsBox {
+    padding: 6px 8px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    background: #fff;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+
 /* Styles for map div */
 div#mapCanvas {
   height: 555px;
