--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-  <title>CartoLib</title>
+  <title>Chicago Urban Agriculture Mapping Project</title>
 
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
