--- a/css/custom.css
+++ b/css/custom.css
@@ -38,11 +38,17 @@ div#mapCanvas {
 }
 
 /* General Styling */
+:root {
+  --text-color: #f7fff4;
+  --green-color: #3B961C;
+  --purple-color: #8A2B85;
+}
+
 body {
   background-color: #e7e7e7;
 }
 
-a { 
+a {
   color: inherit !important;
 }
 
@@ -51,10 +57,8 @@ iframe {
   height: 3625px;
 }
 
-:root {
-  --text-color: #f7fff4;
-  --green-color: #3B961C;
-  --purple-color: #8A2B85;
+.navbar, .footer {
+  border-radius: 0;
 }
 
 .btn {
@@ -80,6 +84,17 @@ iframe {
   border-color: #828282;
 }
 
+.btn-change {
+  background-color: var(--green-color);
+  color: #fff;
+}
+
+.btn-change:hover,.btn-change.focus,.btn-change:focus,.btn-change.active,.btn-change:active,.open>.dropdown-toggle.btn-change  {
+  background-color: #49BE23;
+  border-color: #49BE23;
+  color: #fff;
+}
+
 .navbar {
   font-family: 'Istok Web', sans-serif;
   color: var(--text-color);
@@ -95,7 +110,7 @@ iframe {
 
 .navbar-inverse .navbar-brand {
   color: var(--text-color);
-  margin: 0.25em; 
+  margin: 0.25em;
   font-size: 1.8em;
   line-height: 0.9em;
 }
@@ -119,14 +134,25 @@ iframe {
   padding:25px;
 }
 
-.panel-footer {
+.footer {
   background-color: var(--purple-color);
   border-color: var(--purple-color);
-  text-align: center;
-  margin-top: 1em;
+}
+
+.footer h3 {
+  border-bottom: 1px solid #A0499C;
+  margin-top: 0;
+}
+
+.footer .col-border {
+  /*border-right: 1px solid #A0499C;*/
+  height: 150px;
+}
+
+.footer .container {
+  color: #fff;
   font-family: 'Istok Web', sans-serif;
-  font-size: 0.9em;
-  color: var(--text-color);
+  padding: 12px;
 }
 
 .form-control {
@@ -145,7 +171,6 @@ iframe {
   height: 36px;
   font-size: 14px;
 }
-
 
 .select2-container {
    width: 94% !important;
@@ -167,11 +192,11 @@ iframe {
   padding: 5px 4px;
 }
 
-.m-top-sm { 
+.m-top-sm {
   margin-top: 15px;
 }
 
-.m-bottom-sm { 
+.m-bottom-sm {
   margin-bottom: 15px;
 }
 
@@ -207,12 +232,12 @@ iframe {
   margin-top: 2em;
 }
 
-.modal-body-bottom { 
-  border-top: 1px solid #F0F0F0; 
+.modal-body-bottom {
+  border-top: 1px solid #F0F0F0;
 }
 
-.modal-directions { 
-  font-weight: 700; 
+.modal-directions {
+  font-weight: 700;
   font-size: 17px;
   color: #A81F32 ;
 }
@@ -246,7 +271,6 @@ iframe {
   color: #7F7F7F;
 }
 
-
 .checkbox {
   margin-top: 1em;
   margin-bottom: 1.5em;
@@ -254,7 +278,7 @@ iframe {
 }
 
 .leaf-box input[type="checkbox"],
-.leaf-box .checked{ 
+.leaf-box .checked{
   display: none;
 }
 
@@ -270,9 +294,8 @@ iframe {
   color: var(--green-color);
 }
 
-.dl-horizontal dt 
-{
+.dl-horizontal dt {
     white-space: normal;
-    width: 220px; 
+    width: 220px;
     margin-right: 10px;
 }
