--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
 
 <body>
-  <nav class="navbar navbar-inverse">
+  <!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header container-fluid">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -64,6 +64,38 @@
         </ul>
       </div>
     </div>
+
+  </nav> -->
+
+  <nav class="navbar">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+          <a href="/">
+            <img src="/images/logo.png" width="80" height="80" class="d-inline-block align-top hidden-xs" alt="">
+            Chicago Urban Agriculture Mapping Project
+          </a>
+        </div>
+      </div>
+
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav pull-right" id="dropdown-results">
+          <li>
+            <a href="/about"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
+          </li>
+          <li>
+            <a href="/form"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </nav>
 
   <div class='container'>
