Find solution for location search

--- a/css/custom.css
+++ b/css/custom.css
@@ -116,7 +116,7 @@ iframe {
 .navbar .navbar-brand {
   font-size: 1.6em;
     height: 50px;
-    padding: 15px 15px;
+    padding: 10px;
     line-height: 20px;
 }
 
@@ -187,7 +187,10 @@ iframe {
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
   margin-top: 2%;
-  width: 100%
+}
+
+.select2-container--default .select2-search--inline .select2-search__field {
+  width: 150px !important;
 }
 
 .dropdown-menu > li > a {
