Small UI modifications

--- a/css/custom.css
+++ b/css/custom.css
@@ -190,7 +190,7 @@ iframe {
 }
 
 .select2-container--default .select2-search--inline .select2-search__field {
-  width: 150px !important;
+  width: 100% !important;
 }
 
 .dropdown-menu > li > a {
