Refactor JS into multiple files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
   <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/lib/cartodb.js"></script>
   <script type="text/javascript" src="js/lib/leaflet-google.js"></script>
-  <script type="text/javascript" src="js/lib/cartoLib.js"></script>
+  <script type="text/javascript" src="js/utils.js"></script>
   <script type="text/javascript" src="js/chicago_gardens.js"></script>
+  <script type="text/javascript" src="js/chicago_gardens_map.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
 
 </head>
