--- a/css/custom.css
+++ b/css/custom.css
@@ -150,6 +150,11 @@ iframe {
   border-top: 1px solid #eee;
 }
 
+#collapseOne .panel-body {
+  padding-bottom: 2px;
+  padding-top: 8px;
+}
+
 .form-control {
   width: 100% ;
 }
