--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,10 +57,10 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right" id="dropdown-results">
           <li>
-            <a href="/about"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
+            <a href="/about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
           </li>
           <li>
-            <a href="/form"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
+            <a href="/form.html"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
           </li>
         </ul>
       </div>
