--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         <div class="navbar-brand">
           <a href="/">
             <img src="/images/logo.png" width="80" height="80" class="d-inline-block align-top hidden-xs" alt="">
-            Chicago Urban Agriculture Mapping Project
+           Chicago Urban Agriculture Mapping Project
           </a>
         </div>
       </div>
@@ -57,11 +57,15 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right" id="dropdown-results">
           <li>
-            <a href="/about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
+            <a href="/about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> What we are</a>
           </li>
           <li>
-            <a href="/form.html"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
+            <a href="/add.html"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add or edit a location</a>
           </li>
+          <li>
+            <a href="/compost.html"><i class="fa fa-trash" aria-hidden="true"></i> Compost registration</a>
+          </li>
+
         </ul>
       </div>
     </div>
