--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -31,6 +31,10 @@
                         <div class="col-sm-6 ft-strong" id="commarea-header"></div>
                         <div class="col-sm-6" id="commarea-subsection"></div>
                     </div>
+                    <div class="row"> 
+                        <div class="col-sm-6 ft-strong" id="district-header"></div>
+                        <div class="col-sm-6" id="district-subsection"></div>
+                    </div>
                 <br>
                 </div>
                 <!-- Contact and people -->
