--- a/css/custom.css
+++ b/css/custom.css
@@ -66,6 +66,18 @@ body {
   word-wrap: break-word;
 }
 
+/* About */
+
+ul.about {
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-padding-start: 0;
+}
+
+ul.about li {
+  list-style: none;
+}
+
 /* Navbar and Footer*/
 .navbar, .footer {
   border-radius: 0;
@@ -120,6 +132,7 @@ body {
 .footer {
   background-color: var(--purple-color);
   border-color: var(--purple-color);
+  padding-bottom: 1.2em;
 }
 
 .footer h3 {
