--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,57 +80,9 @@
 
 <footer class="footer">
   <div class="container">
-
     <div class='row'>
       <div class='col-md-12'>
-        <h3 style="line-height: 2em;">Connect With Us</h3>
-      </div>
-    </div>
-
-    <div class='row'>
-      <div class='col-md-3 hidden-xs col-border'>
-        <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
-          <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
-          <p>Phone: (773) 826-3240</p>
-          <br>
-      </div>
-
-      <div class='col-md-3 hidden-xs col-border'>
-        <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
-          <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
-          <p><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
-          <br>
-      </div>
-
-      <div class='col-md-3 hidden-xs'>
-        <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
-          <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
-        <p>Phone: (773) 325-7457</p>
-        <br>
-      </div>
-
-      <div class='col-md-3 hidden-xs col-border'>
-        <h4><a href="https://www.csu.edu/nac/" target="_blank">Chicago State University - Neighborhood Assistance Center</a></h4>
-        <p>
-          Daniel Block, Director<br>
-          Phone: (773) 995-2310<br>
-          <a href="mailto:dblock@csu.edu">dblock@csu.edu</a>
-        </p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="https://www.csu.edu/nac/" target="_blank">Chicago State University - Neighborhood Assistance Center</a></h4>
-        <p>
-          Phone: (773) 995-2310<br>
-        </p>
+         <p class='pull-right'>Website by <a href="https://datamade.us/" target="_blank">DataMade</a> <img src="/images/datamade_logo.png" height="24" alt=""></p>
       </div>
     </div>
   </div>
