--- a/css/custom.css
+++ b/css/custom.css
@@ -23,8 +23,6 @@ body {
   background-color: #e7e7e7;
 }
 
-
-
 .location iframe {
   width: 100%;
   height: 2000px;
@@ -132,12 +130,14 @@ ul.about li {
 .footer {
   background-color: var(--purple-color);
   border-color: var(--purple-color);
-  padding-bottom: 1.2em;
 }
 
-.footer h3 {
-  border-bottom: 1px solid #A0499C;
-  margin-top: 0;
+.footer p {
+  margin-top: 10px;
+}
+
+.footer img {
+  margin-bottom: 12px;
 }
 
 .footer .col-border {
@@ -147,7 +147,7 @@ ul.about li {
 .footer .container {
   color: #fff;
   font-family: var(--font-sans-brand);
-  padding: 12px;
+  padding: 6px;
 }
 
 @media screen and (max-width: 768px) {
