--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 
   <!-- JavaScript -->
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyD7bYe-DiVnrQK3Tyt--vubtfUoiC2B83U"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=places&key=AIzaSyD7bYe-DiVnrQK3Tyt--vubtfUoiC2B83U"></script>
 
   <script type="text/javascript" src="js/lib/jquery.min.js"></script>
   <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
